Fix spacing of elements within UserPage
Move responsibility of spacing from AddItem and UserPage titles to UserPage sections

--- a/client/src/components/add-item/add-item.styles.scss
+++ b/client/src/components/add-item/add-item.styles.scss
@@ -9,7 +9,7 @@
     border: none;
     border-radius: .5rem;
     padding: 0;
-    margin-top: 1rem;
+    margin: 1rem 0;
     background-color: var(--color-primary-faded);
     box-shadow: 1rem 1rem 2rem rgba(black, .2);
     cursor: pointer;
@@ -43,14 +43,6 @@
         font-size: 2.4rem;
         margin-left: 2rem;
     }
-}
-
-.add-item-todo {
-    margin-bottom: 8rem;
-}
-
-.add-item-reward {
-    margin-bottom: 2rem;
 }
 
 @media screen and (max-width: 900px) {
