--- a/client/src/pages/user-page/user-page.styles.scss
+++ b/client/src/pages/user-page/user-page.styles.scss
@@ -11,6 +11,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin: 4rem 0;
 
         .list {
             display: flex;
@@ -23,10 +24,6 @@
     .title {
         font-size: 3.6rem;
         text-align: center;
-        margin-top: 5rem;
-        margin-bottom: 3rem;
-        padding-top: 3rem;
-
     }
 
     .exit-button {
